# agrisentry-iot-platform

./: .gitignore  README.md  license  render.yaml
ai-engine-python/: main.py  requirements.txt
dashboard-vue/: .env.production  index.html  package-lock.json  package.json  vite.config.js
dashboard-vue/src/: App.vue
database/: schema.sql
gateway-rust/: Cargo.toml
gateway-rust/src/: api.rs  db.rs  error.rs  main.rs  models.rs
